# zero-to-production-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  configuration.yml  request.http  sqlx-data.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml  general.yml
configuration/: base.yml  local.yml
docs/: README.md  axum.md  container.md  error-handling.md  hello-world.md  subscribe.md  telemetry.md
examples/: main.rs
examples/axum-errors/: error.http  main.rs
examples/errors/: main.rs
migrations/: 20230104160712_create_subscriptions_table.sql  20230430190003_make_status_not_null_in_subscriptions.sql
sample/: request.http
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: common.rs  health_check.rs  subscription.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscription.rs  subscription_confirm.rs
