[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.15"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = { version = "0.4.24", features = ["clock"], default-features = false }
unicode-segmentation = "1"
validator = "0.16"
fake = "2.5"
quickcheck = "1"
quickcheck_macros = "1"
env_logger = "0.10"
log = "0.4"

[dependencies.sqlx]
version = "^0.6"
default-features = false
features = [
    # tokioランタイムとTLSバックエンドを利用する
    "runtime-tokio-rustls",
    # sqlx::query!などのマクロを利用する
    "macros",
    # Postgres特有の機能を利用する
    "postgres",
    # SQLのUUIDマッピング機能を利用する
    "uuid",
    # SQL timestamptzをDateTime<T>にマッピングする機能を利用する
    "chrono",
    # sqlx-cliのマイグレーションなどの機能を利用する
    "migrate"
]

[dev-dependencies]
claims = "0.7"
hyper = "0.14.26"
mime = "0.3.17"
tower = "0.4.13"
