[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
# debugなどのプロダクションで使用するバイナリに不要な情報を削除する
strip = true

[dependencies]
axum = "0.6.15"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = { version = "0.4.24", features = ["clock"], default-features = false }
unicode-segmentation = "1"
validator = "0.16"
fake = "2.5"
quickcheck = "1"
quickcheck_macros = "1"
env_logger = "0.10"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
hyper = "0.14"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.21"
sha3 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"

[dependencies.sqlx]
version = "^0.6"
default-features = false
features = [
    # tokioランタイムとTLSバックエンドを利用する
    "runtime-tokio-rustls",
    # sqlx::query!などのマクロを利用する
    "macros",
    # Postgres特有の機能を利用する
    "postgres",
    # SQLのUUIDマッピング機能を利用する
    "uuid",
    # SQL timestamptzをDateTime<T>にマッピングする機能を利用する
    "chrono",
    # sqlx-cliのマイグレーションなどの機能を利用する
    "migrate",
    # DBサーバーに接続しない状態でもコンパイル可能にする機能
    "offline",
]

[dev-dependencies]
claims = "0.7"
hyper = "0.14.26"
linkify = "0.9"
mime = "0.3.17"
tower = "0.4.13"
wiremock = "0.5"
